--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,3 +1,4 @@
+@import url(fontawesome.css);
 body{
     margin:0;
     padding:0;
@@ -11,6 +12,7 @@ body{
     position: fixed;
     width: 25%;
     height: 100vh;
+    left: 5%;
     background-color:#21385d;
     text-align: center;
 }
@@ -18,11 +20,12 @@ body{
     width: 100%;
 }
 
-.menu-image{
+.menu-image{    
     margin-top:30px;    
 }
 
 .menu-image img{
+    display: unset;
     border-radius:50%;
 }
 
@@ -64,9 +67,36 @@ body{
     transition: all 0.5s;
     border-top: 2px solid #fff;
 }
-.menu-nav li.active a {
+
+.menu-nav li:hover a,.menu-nav li.active a {
     background: #fff;
     color: #8c363e;
+}
+
+.menu-snetwork {
+    margin-top: 60px;
+}
+
+.menu-snetwork ul li {
+    margin: 0 4px;
+    display: inline-block;
+}
+
+.menu-snetwork ul li a {
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    text-align: center;
+    line-height: 40px;
+    background-color: rgba(0, 0, 0, 0.2);
+    color: #fff;
+    font-size: 14px;
+    transition: all 0.5s;
+}
+
+.menu-snetwork ul li a:hover {
+    background-color: #fff;
+    color: #a43f49;
 }
 
 .section{
@@ -81,15 +111,136 @@ body{
     border-bottom: 3px solid rgba(250, 250, 250, 0.25);
 }
 
-.section-container{
-
+.section-header {
+    text-align: center;
+    padding: 80px 45px;
 }
-.section-header{
 
+.section-header h2 {
+    font-size: 32px;
+    font-weight: 700;
+    color: #fff;
 }
-.section-body{
 
+.section-body h4 {
+    font-size: 26px;
+    font-weight: 600;
+    color: #fff;
 }
-.form-section{
 
+.section-header .underline{
+    width: 60px;
+    height: 3px;
+    background-color: #a43f49;
+    margin: 10px auto;
+}
+
+.section-body p {
+    margin-top: 5px;
+    font-size: 20px;
+    color: #fff;
+    letter-spacing: 0.5px;
+}
+
+.section-body .underline{
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    margin: 10px auto;
+}
+
+.section-body ul li {
+    margin-top: 5px;
+    font-size: 20px;
+    color: #fff;
+    letter-spacing: 0.5px;
+}
+
+#menu-toggle {
+    z-index: 999;
+    cursor: pointer;
+    position: fixed;
+    top: 0;
+    left: 0;
+    color: #a43f49;
+    background-color: #fff;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    display: inline-block;
+    line-height: 60px;
+}
+
+
+#menu-close {
+    cursor: pointer;
+    text-align: right;
+    color: #a43f49;
+    background-color: #fff;
+    width: 100%;
+    height: 60px;
+    text-align: center;
+    display: inline-block;
+    line-height: 60px;
+}
+
+@media screen and (max-width: 1680px) and (min-width: 1280px) { 
+    .menu {
+        width: 25%;
+    }
+}
+
+@media screen and (max-width: 1280px) and (min-width: 846px) {
+    .menu {
+        left: 0%;
+    }
+}
+
+#menu-toggle,
+#menu-close {
+    display: none;
+}  
+
+
+@media screen and (max-width: 845px) {        
+    #menu-toggle,
+    #menu-close {
+        display: inline-block;
+    }
+    .menu {        
+        z-index: 999;
+        cursor: pointer;
+        position: fixed;
+        width: 320px;
+        left: 0%;
+        -webkit-transform: translateX(-100%) !important;
+        transform: translateX(-100%) !important;
+        transition: -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
+        transition: transform 233ms cubic-bezier(0, 0, 0.21, 1);
+        transition: transform 233ms cubic-bezier(0, 0, 0.21, 1), -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
+    }
+
+    .menu .image {
+        margin-top: 40px;        
+    }
+
+    .menu .image img {
+        width: 120px;
+        height: 120px;
+    }    
+    .menu .container {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .menu.open {
+        display: inline-block;
+        -webkit-transform: translateX(0) !important;
+                transform: translateX(0) !important;
+    }
+    .section {
+        width: 94%;
+        right: 3%;
+        left: 3%;
+    }    
 }
