--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -244,3 +244,28 @@ body{
         left: 3%;
     }    
 }
+
+.lab-exp li{
+    padding-left: 5%;
+    padding-bottom: 15px;
+
+}
+.lab-exp h2{
+    font-size: 22px;
+    font-weight: 500;
+    color: #fff;
+    margin-left: -3%;
+}
+.lab-exp h3{
+    font-size: 18px;
+    font-weight: 500;
+    color: #fff;
+    margin-left: -1%;
+    
+}
+.lab-exp p{
+    font-size: 16px;
+    font-weight: 300;
+    color: #fff;
+    padding-left: 5%;
+}
